--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sonner": "^2.0.3",
     "tailwind": "^2.3.1",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
